Fix too large search radius

--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,8 @@ button {
 button:hover {
   background-color: #f9f9f9;
 }
+
+.error {
+  color: #D33;
+  font-size: 12px;
+}
